# dataxid-syntheval

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/dataxid_syntheval/: __init__.py  _config.py  _diff.py  _discretize.py  _encode_privacy.py  _fidelity.py  _ingest.py  _privacy.py  _score.py
src/dataxid_syntheval/_report/: __init__.py  _charts.py  _html.py
src/dataxid_syntheval/_report/templates/: syntheval.html.j2
src/dataxid_syntheval/assets/: __init__.py
tests/: conftest.py  test_charts.py  test_config.py  test_diff.py  test_discretize.py  test_fidelity.py  test_html.py  test_ingest.py  test_privacy.py  test_score.py  test_syntheval.py
