[project]
name = "dataxid-syntheval"
version = "0.2.0"
description = "Synthetic data quality evaluation with Polars-native performance and interactive HTML reports."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "DataXID", email = "dev@dataxid.com" }]
keywords = [
    "polars",
    "synthetic-data",
    "data-quality",
    "evaluation",
    "privacy",
    "synthetic-data-evaluation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "dataxid-profiling>=0.3",
    "jinja2>=3.1",
    "model2vec>=0.3",
    "polars>=1.0",
    "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://dataxid.com"
Repository = "https://github.com/dataxid/dataxid-syntheval"
Issues = "https://github.com/dataxid/dataxid-syntheval/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataxid_syntheval"]

[tool.hatch.build.targets.wheel.force-include]
"src/dataxid_syntheval/py.typed" = "dataxid_syntheval/py.typed"
"src/dataxid_syntheval/assets" = "dataxid_syntheval/assets"

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "ARG", "T201"]

[tool.ruff.lint.isort]
known-first-party = ["dataxid_syntheval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
